--- a/app/src/main/res/layout/item_membership.xml
+++ b/app/src/main/res/layout/item_membership.xml
@@ -105,6 +105,27 @@
                 />
 
 
+
+            <TextView
+                android:id="@+id/btnSubscribe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/subscribe"
+                android:layout_gravity="end"
+                android:textSize="@dimen/_12sdp"
+                android:textColor="@color/white"
+                android:gravity="end"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:paddingTop="@dimen/_2sdp"
+                android:paddingBottom="@dimen/_2sdp"
+                android:layout_margin="@dimen/_10sdp"
+                android:background="@drawable/rounded_red_btn_bg"
+                />
+
+
+
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
