--- a/app/src/main/res/layout/item_membership.xml
+++ b/app/src/main/res/layout/item_membership.xml
@@ -3,19 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_margin="@dimen/_5sdp"
-        app:cardCornerRadius="@dimen/_2sdp"
-        app:cardElevation="@dimen/_5sdp">
-
-        <LinearLayout
+    <LinearLayout
+            android:id="@+id/llMain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/_10sdp"
+            android:layout_margin="@dimen/_5sdp"
+            android:background="@drawable/rounded_white_bg_5"
+            android:elevation="@dimen/_5sdp"
             >
 
             <TextView
@@ -104,30 +100,61 @@
                 android:textColor="@color/grey"
                 />
 
-
-
-            <TextView
-                android:id="@+id/btnSubscribe"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/subscribe"
-                android:layout_gravity="end"
-                android:textSize="@dimen/_12sdp"
-                android:textColor="@color/white"
-                android:gravity="end"
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp"
-                android:paddingTop="@dimen/_2sdp"
-                android:paddingBottom="@dimen/_2sdp"
                 android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/rounded_red_btn_bg"
-                />
+                >
+
+
+                <TextView
+                    android:id="@+id/btnRecommended"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/recommended"
+                    android:layout_gravity="end"
+                    android:textSize="@dimen/_12sdp"
+                    android:textColor="@color/white"
+                    android:gravity="end"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_10sdp"
+                    android:paddingTop="@dimen/_2sdp"
+                    android:paddingBottom="@dimen/_2sdp"
+                    android:background="@drawable/rounded_green_btn_bg"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentStart="true"
+                    android:visibility="gone"
+                    />
+
+
+                <TextView
+                    android:id="@+id/btnSubscribe"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/subscribe"
+                    android:layout_gravity="end"
+                    android:textSize="@dimen/_12sdp"
+                    android:textColor="@color/white"
+                    android:gravity="end"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_10sdp"
+                    android:paddingTop="@dimen/_2sdp"
+                    android:paddingBottom="@dimen/_2sdp"
+                    android:background="@drawable/rounded_red_btn_bg"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentEnd="true"
+                    />
+
+
+            </RelativeLayout>
+
+
+
 
 
 
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
 
 </layout>
