--- a/app/src/main/res/layout/item_plan.xml
+++ b/app/src/main/res/layout/item_plan.xml
@@ -37,6 +37,19 @@
             />
 
         <TextView
+            android:id="@+id/tvStartDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/skip"
+            android:layout_gravity="center_vertical"
+            android:textSize="@dimen/_11sdp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/_2sdp"
+            />
+
+
+        <TextView
             android:id="@+id/tvEndDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -103,23 +116,7 @@
             />
 
 
-        <TextView
-            android:id="@+id/tvStatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/grey"
-            />
 
-        <TextView
-            android:id="@+id/tvDateTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/grey"
-            />
 
 
 
@@ -129,6 +126,28 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_10sdp"
             >
+
+
+            <TextView
+                android:id="@+id/tvStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_gravity="end"
+                android:textSize="@dimen/_12sdp"
+                android:textColor="@color/white"
+                android:gravity="end"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:paddingTop="@dimen/_2sdp"
+                android:paddingBottom="@dimen/_2sdp"
+                android:background="@drawable/rounded_red_btn_bg"
+                android:layout_centerInParent="true"
+                android:layout_alignParentStart="true"
+                />
+
+
+
 
 
             <TextView
