--- a/app/src/main/res/layout/item_membership.xml
+++ b/app/src/main/res/layout/item_membership.xml
@@ -55,9 +55,8 @@
                 android:text="@string/skip"
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/_10sdp"
-                android:textColor="@color/grey"
+                android:textColor="@color/darkgrey"
                 android:layout_marginTop="@dimen/_2sdp"
-
                 />
 
             <TextView
@@ -67,7 +66,9 @@
                 android:text="@string/skip"
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/_10sdp"
-                android:textColor="@color/grey"
+                android:textColor="@color/darkgrey"
+                android:layout_marginTop="1dp"
+
                 />
 
             <TextView
@@ -77,7 +78,9 @@
                 android:text="@string/skip"
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/_10sdp"
-                android:textColor="@color/grey"
+                android:textColor="@color/darkgrey"
+                android:layout_marginTop="1dp"
+
                 />
 
             <TextView
@@ -87,7 +90,9 @@
                 android:text="@string/skip"
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/_10sdp"
-                android:textColor="@color/grey"
+                android:textColor="@color/darkgrey"
+                android:layout_marginTop="1dp"
+
                 />
 
             <TextView
@@ -97,7 +102,8 @@
                 android:text="@string/skip"
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/_10sdp"
-                android:textColor="@color/grey"
+                android:textColor="@color/darkgrey"
+                android:layout_marginTop="1dp"
                 />
 
 
@@ -118,11 +124,10 @@
                     android:layout_gravity="end"
                     android:textSize="@dimen/_12sdp"
                     android:textColor="@color/white"
-                    android:gravity="end"
                     android:paddingStart="@dimen/_10sdp"
                     android:paddingEnd="@dimen/_10sdp"
-                    android:paddingTop="@dimen/_2sdp"
-                    android:paddingBottom="@dimen/_2sdp"
+                    android:paddingTop="@dimen/_3sdp"
+                    android:paddingBottom="@dimen/_3sdp"
                     android:background="@drawable/rounded_green_btn_bg"
                     android:layout_centerInParent="true"
                     android:layout_alignParentStart="true"
@@ -138,11 +143,10 @@
                     android:layout_gravity="end"
                     android:textSize="@dimen/_12sdp"
                     android:textColor="@color/white"
-                    android:gravity="end"
                     android:paddingStart="@dimen/_10sdp"
                     android:paddingEnd="@dimen/_10sdp"
-                    android:paddingTop="@dimen/_2sdp"
-                    android:paddingBottom="@dimen/_2sdp"
+                    android:paddingTop="@dimen/_3sdp"
+                    android:paddingBottom="@dimen/_3sdp"
                     android:background="@drawable/rounded_red_btn_bg"
                     android:layout_centerInParent="true"
                     android:layout_alignParentEnd="true"
