update code second 02 June 2025   by Keshav Savita

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="red">#f70101</color>
     <color name="red_trans">#28f70101</color>
     <color name="green">#05ce02</color>
+    <color name="green2">#34C759</color>
+
     <color name="darkgreen">#07ab05</color>
     <color name="greyborder">#e0e0e0</color>
     <color name="grey">#c7c6c6</color>
