--- a/app/src/main/res/layout/item_membership.xml
+++ b/app/src/main/res/layout/item_membership.xml
@@ -22,7 +22,7 @@
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/_13sdp"
                 android:textColor="@color/black"
-                android:textStyle="bold"
+                android:fontFamily="@font/helvetica_bold"
                 />
 
             <TextView
@@ -31,9 +31,10 @@
                 android:layout_height="wrap_content"
                 android:text="@string/skip"
                 android:layout_gravity="center_vertical"
-                android:textSize="@dimen/_17sdp"
+                android:textSize="@dimen/_13sdp"
                 android:textColor="@color/black"
-                android:textStyle="bold"
+                android:fontFamily="@font/helvetica_bold"
+                android:layout_marginTop="-2dp"
                 />
 
             <TextView
@@ -42,10 +43,10 @@
                 android:layout_height="wrap_content"
                 android:text="@string/skip"
                 android:layout_gravity="center_vertical"
-                android:textSize="@dimen/_11sdp"
+                android:textSize="@dimen/_13sdp"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:layout_marginTop="@dimen/_2sdp"
+                android:fontFamily="@font/helvetica_bold"
+                android:layout_marginTop="-2dp"
                 />
 
             <TextView
@@ -57,6 +58,8 @@
                 android:textSize="@dimen/_10sdp"
                 android:textColor="@color/darkgrey"
                 android:layout_marginTop="@dimen/_2sdp"
+                android:fontFamily="@font/helvetica"
+
                 />
 
             <TextView
@@ -68,6 +71,7 @@
                 android:textSize="@dimen/_10sdp"
                 android:textColor="@color/darkgrey"
                 android:layout_marginTop="1dp"
+                android:fontFamily="@font/helvetica"
 
                 />
 
@@ -80,6 +84,7 @@
                 android:textSize="@dimen/_10sdp"
                 android:textColor="@color/darkgrey"
                 android:layout_marginTop="1dp"
+                android:fontFamily="@font/helvetica"
 
                 />
 
@@ -92,6 +97,7 @@
                 android:textSize="@dimen/_10sdp"
                 android:textColor="@color/darkgrey"
                 android:layout_marginTop="1dp"
+                android:fontFamily="@font/helvetica"
 
                 />
 
@@ -104,6 +110,8 @@
                 android:textSize="@dimen/_10sdp"
                 android:textColor="@color/darkgrey"
                 android:layout_marginTop="1dp"
+                android:fontFamily="@font/helvetica"
+
                 />
 
 
@@ -118,36 +126,30 @@
 
                 <TextView
                     android:id="@+id/btnRecommended"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_100sdp"
+                    android:layout_height="@dimen/_30sdp"
                     android:text="@string/recommended"
-                    android:layout_gravity="end"
                     android:textSize="@dimen/_12sdp"
                     android:textColor="@color/white"
-                    android:paddingStart="@dimen/_10sdp"
-                    android:paddingEnd="@dimen/_10sdp"
-                    android:paddingTop="@dimen/_3sdp"
-                    android:paddingBottom="@dimen/_3sdp"
+                    android:gravity="center"
                     android:background="@drawable/rounded_green_btn_bg"
                     android:layout_centerInParent="true"
                     android:layout_alignParentStart="true"
                     android:visibility="gone"
+                    android:fontFamily="@font/helvetica"
                     />
 
 
                 <TextView
                     android:id="@+id/btnSubscribe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_100sdp"
+                    android:layout_height="@dimen/_30sdp"
                     android:text="@string/subscribe"
-                    android:layout_gravity="end"
+                    android:gravity="center"
                     android:textSize="@dimen/_12sdp"
                     android:textColor="@color/white"
-                    android:paddingStart="@dimen/_10sdp"
-                    android:paddingEnd="@dimen/_10sdp"
-                    android:paddingTop="@dimen/_3sdp"
-                    android:paddingBottom="@dimen/_3sdp"
-                    android:background="@drawable/rounded_red_btn_bg"
+                    android:fontFamily="@font/helvetica"
+                    android:background="@drawable/rounded_green_btn_bg"
                     android:layout_centerInParent="true"
                     android:layout_alignParentEnd="true"
                     />
