--- a/app/src/main/res/layout/item_plan.xml
+++ b/app/src/main/res/layout/item_plan.xml
@@ -22,7 +22,7 @@
             android:layout_gravity="center_vertical"
             android:textSize="@dimen/_13sdp"
             android:textColor="@color/black"
-            android:textStyle="bold"
+            android:fontFamily="@font/helvetica_bold"
             />
 
         <TextView
@@ -31,9 +31,11 @@
             android:layout_height="wrap_content"
             android:text="@string/skip"
             android:layout_gravity="center_vertical"
-            android:textSize="@dimen/_17sdp"
+            android:textSize="@dimen/_13sdp"
             android:textColor="@color/black"
-            android:textStyle="bold"
+            android:fontFamily="@font/helvetica_bold"
+            android:layout_marginTop="-2dp"
+
             />
 
         <TextView
@@ -42,10 +44,11 @@
             android:layout_height="wrap_content"
             android:text="@string/skip"
             android:layout_gravity="center_vertical"
-            android:textSize="@dimen/_11sdp"
+            android:textSize="@dimen/_13sdp"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_marginTop="@dimen/_2sdp"
+            android:fontFamily="@font/helvetica_bold"
+            android:layout_marginTop="-2dp"
+
             />
 
 
@@ -55,10 +58,11 @@
             android:layout_height="wrap_content"
             android:text="@string/skip"
             android:layout_gravity="center_vertical"
-            android:textSize="@dimen/_11sdp"
+            android:textSize="@dimen/_13sdp"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_marginTop="@dimen/_2sdp"
+            android:fontFamily="@font/helvetica_bold"
+            android:layout_marginTop="-2dp"
+
             />
 
 
@@ -72,6 +76,8 @@
             android:textSize="@dimen/_10sdp"
             android:textColor="@color/darkgrey"
             android:layout_marginTop="@dimen/_2sdp"
+            android:fontFamily="@font/helvetica"
+
             />
 
         <TextView
@@ -83,6 +89,7 @@
             android:textSize="@dimen/_10sdp"
             android:textColor="@color/darkgrey"
             android:layout_marginTop="1dp"
+            android:fontFamily="@font/helvetica"
 
             />
 
@@ -95,6 +102,7 @@
             android:textSize="@dimen/_10sdp"
             android:textColor="@color/darkgrey"
             android:layout_marginTop="1dp"
+            android:fontFamily="@font/helvetica"
 
             />
 
@@ -107,7 +115,7 @@
             android:textSize="@dimen/_10sdp"
             android:textColor="@color/darkgrey"
             android:layout_marginTop="1dp"
-
+            android:fontFamily="@font/helvetica"
             />
 
         <TextView
@@ -119,7 +127,7 @@
             android:textSize="@dimen/_10sdp"
             android:textColor="@color/darkgrey"
             android:layout_marginTop="1dp"
-
+            android:fontFamily="@font/helvetica"
             />
 
 
@@ -137,18 +145,16 @@
 
             <TextView
                 android:id="@+id/tvStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_80sdp"
+                android:layout_height="@dimen/_30sdp"
                 android:text=""
                 android:textSize="@dimen/_12sdp"
                 android:textColor="@color/white"
-                android:paddingStart="@dimen/_15sdp"
-                android:paddingEnd="@dimen/_15sdp"
-                android:paddingTop="@dimen/_3sdp"
-                android:paddingBottom="@dimen/_3sdp"
-                android:background="@drawable/rounded_red_btn_bg"
+                android:gravity="center"
+                android:background="@drawable/rounded_green_btn_bg"
                 android:layout_centerInParent="true"
                 android:layout_alignParentStart="true"
+                android:fontFamily="@font/helvetica"
                 />
 
 
@@ -157,19 +163,17 @@
 
             <TextView
                 android:id="@+id/btnReceipt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_80sdp"
+                android:layout_height="@dimen/_30sdp"
                 android:text="@string/recipt"
                 android:textSize="@dimen/_12sdp"
                 android:textColor="@color/white"
-                android:paddingStart="@dimen/_15sdp"
-                android:paddingEnd="@dimen/_15sdp"
-                android:paddingTop="@dimen/_3sdp"
-                android:paddingBottom="@dimen/_3sdp"
+                android:gravity="center"
                 android:background="@drawable/rounded_green_btn_bg"
                 android:layout_centerInParent="true"
                 android:layout_alignParentEnd="true"
                 android:visibility="visible"
+                android:fontFamily="@font/helvetica"
                 />
 
 
